
This is a list of changes since the initial release of Palabra.

0.1.5 (unreleased)
* Speed improvements to XML parser.
* Speed improvements to displaying list of words.
* Most common features of XPF 1.0 are supported.
* Added indicator of word quality in search.
* Added ability to sort search results by likelihood of fill.

0.1.4 (June 13, 2010)
* Disabled various features for future release.
* Speed optimizations and refactoring.

0.1.3 (May 24, 2010)
* Added ability to select words by length in properties window.
* Added Scrabble score to properties window.
* Added partial support to read/write XPF 0.9.
* Replaced XML Schema by strict parser.
* Undo/redo rewritten to use states instead of functions.
* Fixed bug in search when an intersecting word is filled in.
* Added ability to show only unused words.
* Improved readability of properties window.
* Added ability to highlight characters in the grid in properties window.
* Added ability to store arbitrary text with a puzzle.
* Fixed bug with rendering of lines near border.
* Added 90 degree rotational symmetry and symmetry along diagonals.
* Added partial support for overriding cell styles.
* Added partial support for circles.
* Improved speed of new puzzle window.
* Improved speed of rendering a grid.
* Added popup menu for words in the word list.
* Added open cell count to properties window.
* Added connectedness to properties window.
* Added editor to Metadata tab in properties window.
* Added popup menu for cells in the grid.
* Added properties dialog for cells.
* Integrated pattern editor into new puzzle window.
* Pattern editor can also fill a grid with a certain cell type.

0.1.2 (April 2, 2010)
* Partial support for voids.
* Patterns can be selected for new puzzles.
* Added option to create a backup file before saving.
* Simple Dublin Core standard is used for metadata.
* Speed improvements for word lists (rewritten in C).
* Speed improvements for rendering the editor.

0.1.1 (September 15, 2009)